--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "blog-post-graphql",
+  "name": "graphql-basics",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js --ext js,graphql --exec babel-node",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "get-schema": "graphql get-schema -p prisma"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,11 +15,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "graphql-cli": "^2.16.4",
-    "graphql-yoga": "^1.17.4",
+    "graphql-yoga": "^1.14.10",
     "prisma-binding": "^2.1.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.17.5"
   }
 }
